opam-version: "1"

package "crypto_keys" {
  version:    "0.3dev"
  maintainer: "anil@recoil.org"
  build: [["ocaml" "setup.ml" "-configure" "--prefix" "%{prefix}%"] ["ocaml" "setup.ml" "-build"] ["ocaml" "setup.ml" "-install"]]
  remove: [ "ocamlfind" "remove" "crypto_keys" ]
  depends: [ "ocamlfind" "dns" "cryptokit" ]
}
